# PROJECTS

./: .gitignore  README.md
patient-safety-ai-architect/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
patient-safety-ai-architect/backend/alembic/: env.py
patient-safety-ai-architect/backend/alembic/versions/: 20260119_0900_001_initial_phase1_models.py  20260124_1000_002_psr_form_coverage.py  20260124_1200_003_risk_management.py  20260125_1000_004_user_registration_system.py  20260126_1000_005_add_missing_detail_tables.py  20260126_1100_006_add_lookup_and_patient_fields.py  20260127_1000_007_move_patient_info_to_incident.py  20260127_1400_008_phase_a_quick_wins.py  20260127_1500_009_phase_b_core_improvements.py  20260127_1600_010_pressure_ulcer_end_reason.py  20260128_1000_011_pressure_ulcer_fmea_fields.py
patient-safety-ai-architect/backend/app/: __init__.py  config.py  database.py  main.py
patient-safety-ai-architect/backend/app/api/: actions.py  approvals.py  attachments.py  auth.py  dashboard.py  environment_details.py  fall_details.py  incidents.py  indicators.py  infection_details.py  lookup.py  medication_details.py  pressure_ulcer_details.py  pressure_ulcer_management.py  procedure_details.py  risks.py  (+3 more)
patient-safety-ai-architect/backend/scripts/: seed_all.py  seed_fall_details.py  seed_incidents.py  seed_pressure_ulcer_records.py  seed_users.py
patient-safety-ai-architect/backend/tests/: conftest.py  test_actions.py  test_approvals.py  test_auth.py  test_escalation.py  test_incidents.py  test_risks.py  test_timeline.py
(+147 files in other folders)
